[tool.poetry]
name = "freeradical"
version = "0.1.0"
description = "Stuff that runs the FreeRadical.zone Mastodon instance"
authors = ["Kirk Strauser <kirk@strauser.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8"
lxml = "^4.9"
requests = "^2.22"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
flake8 = "^3.7"
mypy = "^0.700.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
