[tool.poetry]
name = "freeradical"
version = "0.1.0"
description = "Stuff that runs the FreeRadical.zone Mastodon instance"
authors = ["Kirk Strauser <kirk@strauser.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12"
lxml = "^4.9"
requests = "^2.31"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
